# llir-benchmark

./: .gitignore  LICENSE  README.md  benchmark.py  build.py  disasm.py  dune  macro.py  micro.py  packages.py  perf.py  report.py  run.py  size.py
benchmarks/almabench/: almabench.ml  dune
benchmarks/bdd/: dune
benchmarks/benchmarksgame/: binarytrees5.ml  fasta3.ml  nbody.ml  regexredux2.ml
benchmarks/numerical-analysis/: dune  durand_kerner_aberth.ml  fft.ml  levinson_durbin.ml  naive_multilayer.ml  qr_decomposition.ml
benchmarks/simple-tests/: dune
benchmarks/stdlib/: dune  hashtbl_bench.ml  str_bench.ml
macro/almabench/: dune
macro/alt-ergo/: dune  fill.why  yyll.why
macro/bdd/: bdd.ml  dune
macro/benchmarksgame/: dune  fannkuchredux.ml  fannkuchredux2.ml  fasta6.ml  pidigits5.ml  spectralnorm2.ml
macro/boxroot/: README.md
macro/boxroot/benchmarks/: dune  globroots.ml  local_roots.ml  local_roots_stubs.c  perm_count.ml  synthetic.ml
macro/boxroot/benchmarks/lib-choice/: config.ml  dune  ephemeral.ml  persistent.ml
macro/boxroot/benchmarks/lib-ref/: abstract_out_of_heap.c  abstract_out_of_heap.h  boxroot.c  boxroot_ref.ml  config.ml  dune  gc.c  gc_ref.ml  generational.c  generational_ref.ml  global.c  global_ref.ml  ocaml_ref.ml
macro/boxroot/boxroot/: boxroot.c  boxroot.h  dune
macro/chameneos/: chameneos_redux_lwt.ml  dune
macro/compcert/: dune  sqlite3.i
macro/coq/: .BasicSyntax.aux  .lia.cache  BasicSyntax.glob  Explode.v  Int.v  dune
macro/cpdf/: dune
macro/crypto/: dune  ed25519_hacl.ml  ed25519_hacl_external.ml  ed25519_sodium.ml  hacl_stubs.c  p256_hacl.ml  p256_hacl_ctypes.ml  p256_hacl_decompress.ml  p256_hacl_external.ml  p256_manual_decompress.ml  p256_uecc.ml  util.ml  util_ed25519.ml  util_p256.ml
macro/crypto/ocaml-uecc/src/: types.h  uECC.c  uecc.ml  uecc.mli
macro/cubicle/: dune
macro/frama-c/: dune  t.c  t.i
macro/irmin/: dune
macro/jsonm/: dune
macro/kb/: dune  kb.ml  kb_no_exc.ml
macro/lexifi-g2pp/: dune
macro/llir/: dune  fft.ml
macro/menhir/: dune
macro/minilight/: dune
macro/numerical-analysis/: dune  durand_kerner_aberth.ml  lu_decomposition.ml
macro/ocamlc/: dune  pairs.ml
macro/ocamlformat/: dune
macro/sequence/: dune
macro/simple-tests/: dune  finalise.ml  lists.ml  stacks.ml  stress.ml  weakretain.ml
macro/stdlib/: bytes_bench.ml  dune
macro/stdlib-static/: array_bench.ml  dune  map_bench.ml  string_bench.ml
macro/stdlib_static/: big_array_bench.ml  dune  pervasives_bench.ml  set_bench.ml
macro/thread-lwt/: dune
macro/valet/: dune
macro/vec/: dune  integer_dot.ml
macro/yojson/: dune  ydump.ml
macro/zarith/: dune
micro/almabench/: almabench.ml  dune
micro/bdd/: bdd.ml  dune
micro/bigarray_rev/: bigarray_rev.ml  dune
micro/boyer/: boyer.ml  dune
micro/fft/: dune  fft.ml
micro/fibonacci/: dune
micro/fibonnaci/: dune  fibonacci.ml
micro/format/: dune  format.ml
micro/hamming/: dune  hamming.ml
micro/harness/: cycles.c  dune  micro_bench_run.ml  micro_bench_run.mli  micro_bench_types.mli  time_stamp_counter.ml
micro/kahan_sum/: dune  kahan_sum.ml
micro/kb/: dune  kb.ml
micro/lens/: dune  lens.ml
micro/list/: dune  list.ml
micro/nucleic/: dune  nucleic.ml
micro/num_analysis/: dka_result.ml  dune  fft_result.ml  levinson_durbin_result.ml  lu_decomposition_result.ml  num_analysis.ml  qr_decomposition_result.ml
micro/sequence/: dune  sequence.ml
micro/sieve/: dune  sieve.ml
micro/vector_functor/: dune  vector_functor.ml
