
(executable (name alloc) (modules alloc))
(executable (name morestacks) (modules morestacks))
(executable (name lists) (modules lists))
(executable (name stress) (modules stress))
(executable (name finalise) (modules finalise))
(executable (name stacks) (modules stacks))
(executable (name lazylist) (modules lazylist))
(executable (name weakretain) (modules weakretain))

(executable
  (name capi)
  (modules capi)
  (libraries ocamlcapi))

(library
  (name ocamlcapi)
  (modules ocamlcapi)
  (foreign_stubs 
    (language c) 
    (names ocamlcapi)))

(alias 
  (name buildbench) 
  (deps 
    alloc.exe
    lists.exe
    capi.exe
    stress.exe
    stacks.exe
    lazylist.exe
    weakretain.exe
    finalise.exe
    morestacks.exe))
