(executable (name binarytrees5) (modules binarytrees5))
(executable (name fannkuchredux2) (modules fannkuchredux2))
(executable (name fannkuchredux) (modules fannkuchredux))
(executable (name fasta3) (modules fasta3))
(executable (name fasta6) (modules fasta6))
(executable (name knucleotide) (modules knucleotide))
(executable (name mandelbrot6) (modules mandelbrot6))
(executable (name nbody) (modules nbody))
(executable (name regexredux2) (modules regexredux2) (libraries str))
(executable (name revcomp2) (modules revcomp2))
(executable (name spectralnorm2) (modules spectralnorm2))

(executable
  (name pidigits5)
  (modules pidigits5)
  (libraries zarith))

(rule
  (targets knucleotide-input.txt)
  (deps (:prog fasta3.exe))
  (action (with-stdout-to %{targets} (run %{prog} 1_000_000 > %{targets}))))

(alias
  (name buildbench)
  (deps
    binarytrees5.exe
    fannkuchredux2.exe
    fannkuchredux.exe
    fasta3.exe
    fasta6.exe
    knucleotide.exe
    mandelbrot6.exe
    nbody.exe
    pidigits5.exe
    regexredux2.exe
    revcomp2.exe
    spectralnorm2.exe
    knucleotide-input.txt))
