(library
  (name util)
  (modules util)
  (libraries bigstring hacl-star))

(library
  (name util_ed25519)
  (modules util_ed25519)
  (libraries util))

(library
  (name util_p256)
  (modules util_p256)
  (libraries util))

(library
  (name stubs)
  (modules)
  (foreign_stubs (language c) (names hacl_stubs))
  (c_library_flags (-L%{env:OPAM_SWITCH_PREFIX=}/lib/hacl-star-raw -levercrypt)))

(executable (flags (:standard -ccopt -static)) (name ed25519_hacl) (modules ed25519_hacl) (libraries util_ed25519))
(executable (flags (:standard -ccopt -static)) (name ed25519_hacl_external) (modules ed25519_hacl_external) (libraries util_ed25519 stubs))
(executable (flags (:standard -ccopt -static)) (name ed25519_sodium) (modules ed25519_sodium) (libraries util_ed25519 sodium))
(executable (flags (:standard -ccopt -static)) (name p256_hacl) (modules p256_hacl) (libraries util_p256))
(executable (flags (:standard -ccopt -static)) (name p256_hacl_ctypes) (modules p256_hacl_ctypes) (libraries util_p256))
(executable (flags (:standard -ccopt -static)) (name p256_hacl_external) (modules p256_hacl_external) (libraries util_p256 stubs))
(executable (flags (:standard -ccopt -static)) (name p256_uecc) (modules p256_uecc) (libraries util_p256 uecc))

(alias
  (name build_crypto)
  (deps
    ed25519_hacl.exe
    ed25519_hacl_external.exe
    ed25519_sodium.exe
    p256_hacl.exe
    p256_hacl_ctypes.exe
    p256_hacl_external.exe
    p256_uecc.exe))
