(executable (name array_bench)      (modules array_bench))
(executable (name bytes_bench)      (modules bytes_bench))
(executable (name hashtbl_bench)    (modules hashtbl_bench))
(executable (name map_bench)        (modules map_bench))
(executable (name pervasives_bench) (modules pervasives_bench))
(executable (name set_bench)        (modules set_bench))
(executable (name stack_bench)      (modules stack_bench))
(executable (name string_bench)     (modules string_bench))
(executable (name big_array_bench)  (modules big_array_bench) (libraries bigarray))
(executable (name str_bench)        (modules str_bench)       (libraries str))


(alias (name build_stdlib_array) (deps array_bench.exe))
(alias (name build_stdlib_big_array) (deps big_array_bench.exe))
(alias (name build_stdlib_bytes) (deps bytes_bench.exe))
(alias (name build_stdlib_hashtbl) (deps hashtbl_bench.exe))
(alias (name build_stdlib_map) (deps map_bench.exe))
(alias (name build_stdlib_pervasives) (deps pervasives_bench.exe))
(alias (name build_stdlib_set) (deps set_bench.exe))
(alias (name build_stdlib_stack) (deps stack_bench.exe))
(alias (name build_stdlib_str) (deps str_bench.exe))
(alias (name build_stdlib_string) (deps string_bench.exe))
